<resources>
    <string name="app_name">Travel Experts</string>
    <string name="action_settings">Settings</string>

    <!--Strings for activity_agent-->
    <string name="items_title">Agents List</string>
    <string name="item_primary">Agent Name</string>
    <string name="item_secondary">Agent No:</string>
    <string name="item_description">Item description</string>

    <!--Strings for activity_agent-->
    <string name="agents_title">Agents List</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="agent_name_label">Agent Name</string>
    <string name="email">Email:</string>
    <string name="position">Position:</string>
    <string name="agency">Agency:</string>
    <string name="agent_small_image">Agent Small Image</string>
    <string name="title_activity_agent">Agents</string>
    <string name="title_activity_activity_agents">activity_agents</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_customers">CustomersActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_packages">PackagesActivity</string>
    <string name="title_activity_package">PackageActivity</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_product">ProductActivity</string>


</resources>
